--- a/uip-web/pom.xml
+++ b/uip-web/pom.xml
@@ -106,7 +106,7 @@
         <uip.core.version>1.0-SNAPSHOT</uip.core.version>
         <java.version>1.7</java.version>
         <jetty.version>8.1.8.v20121106</jetty.version>
-        <mysql.version>5.1.9</mysql.version>
+        <mysql.version>5.1.31</mysql.version>
         <yui.compressor.version>2.4.2</yui.compressor.version>
     </properties>
 
@@ -117,16 +117,16 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <db.name>snmis_nj_20151130</db.name>
+                <db.name>snmis-201512</db.name>
                 <connection.driver_class>com.mysql.jdbc.Driver</connection.driver_class>
                 <connection.admin.url>
-                    <![CDATA[ jdbc:mysql://192.168.1.239:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
+                    <![CDATA[ jdbc:mysql://218.94.66.122:3306?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
                 </connection.admin.url>
                 <connection.url>
-                    <![CDATA[ jdbc:mysql://192.168.1.239:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
+                    <![CDATA[ jdbc:mysql://218.94.66.122:3306/${db.name}?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull ]]>
                 </connection.url>
                 <connection.username>root</connection.username>
-                <connection.password>87783121</connection.password>
+                <connection.password>gdmis!@#$</connection.password>
                 <jpa.showSql>false</jpa.showSql>
                 <jpa.generateDdl>false</jpa.generateDdl>
                 <jpa.database>MYSQL</jpa.database>
