--- a/uip-web/src/main/resources/resources.properties
+++ b/uip-web/src/main/resources/resources.properties
@@ -16,9 +16,9 @@ net.sf.ehcache.configurationResourceName=ehcache/ehcache_hibernate.xml
 hibernate.cache.use_structured_entries=true
 hibernate.generate_statistics=false
 
-connection.url=jdbc:mysql://192.168.1.239:3306/snmis_nj_20151130?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+connection.url=jdbc:mysql://218.94.66.122:3306/snmis-201512?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
 connection.username=root
-connection.password=87783121
+connection.password=gdmis!@#$
 
 #druid datasource
 druid.initialSize=10
